--- a/core/src/main/resources/application.properties
+++ b/core/src/main/resources/application.properties
@@ -1,3 +1,4 @@
 spring.application.name=Microservicio Sprinboot Core Tienda online
 server.servlet.context-path=/tienda/api/v1
 server.port=8080
+productos.estrategia=EN_JSON
