--- a/core/src/main/resources/application.properties
+++ b/core/src/main/resources/application.properties
@@ -1,4 +1,9 @@
 spring.application.name=Microservicio Sprinboot Core Tienda online
 server.servlet.context-path=/tienda/api/v1
 server.port=8080
-productos.estrategia=EN_JSON
+productos.estrategia=EN_OTRA_API
+
+app.nombre=Tienda Online
+app.lenguaje=es
+app.pais=Colombia
+app.author=Raul Torres
