Creacion clases de entidad

--- a/core/src/main/resources/application.properties
+++ b/core/src/main/resources/application.properties
@@ -1,9 +1,23 @@
 spring.application.name=Microservicio Sprinboot Core Tienda online
 server.servlet.context-path=/tienda/api/v1
 server.port=8080
-productos.estrategia=EN_OTRA_API
+productos.estrategia=EN_MEMORIA
 
 app.nombre=Tienda Online
 app.lenguaje=es
 app.pais=Colombia
 app.author=Raul Torres
+
+#Conexion a la base de datos
+spring.datasource.platform=postgres
+spring.datasource.url=jdbc:postgresql://localhost:5432/tienda
+spring.datasource.username=postgres
+spring.datasource.password=1234
+spring.datasource.driver-class-name=org.postgresql.Driver
+
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+#spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=update
+
+#Ejecutar contenedor Docker
+# docker run--name mypostgres2 -p 5432:5432 -e POSTGRES_PASSWORD=1234 -e POSTGRES_DB=tienda -d postgres
