--- a/core/pom.xml
+++ b/core/pom.xml
@@ -66,6 +66,12 @@
 			<artifactId>lombok</artifactId>
 			<scope>provided</scope>
 		</dependency>
+		<dependency>
+			<groupId>com.googlecode.jmapper-framework</groupId>
+			<artifactId>jmapper-core</artifactId>
+			<version>1.6.0.1</version>
+		</dependency>
+
 	</dependencies>
 
 	<build>
